After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 649094 - Problem launching File-roller without Nautilus
Problem launching File-roller without Nautilus
Status: RESOLVED FIXED
Product: file-roller
Classification: Applications
Component: general
3.0.x
Other Linux
: Normal normal
: ---
Assigned To: Paolo Bacchilega
file-roller-maint
Depends on:
Blocks:
 
 
Reported: 2011-05-01 16:24 UTC by 31337h4ck3r
Modified: 2011-10-17 21:32 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Do not crash if nautilus schema is not present (2.52 KB, patch)
2011-10-10 07:15 UTC, Vincent Untz
none Details | Review
Do not crash if nautilus schema is not present (2.50 KB, patch)
2011-10-10 09:06 UTC, Vincent Untz
none Details | Review

Description 31337h4ck3r 2011-05-01 16:24:58 UTC
When I try launching File-roller 3.0 without having Nautilus installed, I get this error:

GLib-GIO-ERROR **: Settings schema 'org.gnome.nautilus.preferences' is not installed

aborting...
Aborted

It would be great if File-roller could run standalone. Also heres my original bug report at Arch Linux:

https://bugs.archlinux.org/task/24007
Comment 1 Ionut Biru 2011-05-01 16:48:58 UTC
is too much to add nautilus as dependency just to get the click settings policy.

shouldn't file-roller use a fallback policy if it can't load it from org.gnome.nautilus.preferences ?
Comment 2 Matthias Clasen 2011-05-02 18:50:07 UTC
gsettings don't work like that...
Comment 3 Ionut Biru 2011-05-02 18:54:56 UTC
what about moving that click policy to gsettings-desktop-schemas for 3.2?
Comment 4 Matthias Clasen 2011-05-02 19:01:36 UTC
It would be wierd to have a click policy setting in the desktop wide schemas that is only getting used by a handful of apps.
Comment 5 31337h4ck3r 2011-05-02 22:49:02 UTC
What about having a separate gsettings schema package for those handful of apps?
Comment 6 Sebastien Bacher 2011-05-25 13:20:57 UTC
seems similar to bug #646728
Comment 7 Vincent Untz 2011-10-10 07:15:14 UTC
Created attachment 198698 [details] [review]
Do not crash if nautilus schema is not present

Until bug 646728 is resolved, we can simply use code like this to avoid crashes: no nautilus schema => double-click policy.
Comment 8 Vincent Untz 2011-10-10 09:06:25 UTC
Created attachment 198700 [details] [review]
Do not crash if nautilus schema is not present

Patch that actually works ;-)
Comment 9 Paolo Bacchilega 2011-10-10 09:34:53 UTC
Vincent, 

I already pushed the first path to master, can you provide a patch against current master ?
Comment 10 Paolo Bacchilega 2011-10-11 09:10:45 UTC
This problem has been fixed in our software repository. The fix will go into the next software release. Thank you for your bug report.
Comment 11 Vincent Untz 2011-10-17 21:32:29 UTC
(In reply to comment #9)
> Vincent, 
> 
> I already pushed the first path to master, can you provide a patch against
> current master ?

Gah, git-bz didn't put me in cc. Good that you didn't wait for me.