Do not crash if nautilus schema is not present

A lot of users use file-roller in non-GNOME environments, where nautilus
is not installed. We don't want to crash in that case as we only need
the nautilus schema to determine if we use single-click vs double-click.

https://bugzilla.gnome.org/show_bug.cgi?id=649094